posting on sub now works

--- a/views/main_community.hbs
+++ b/views/main_community.hbs
@@ -10,8 +10,8 @@
                 <div class = "headercontent">
                     <div class="headerhome">
                         <div class="websitelogo">
-                            <a href="/mainpage_logged"><img src="/public/img/byte_logo.png"/></a>
-                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "/mainpage_logged"> byte. </a> </span>
+                            <a href="../mainpage_logged"><img src="/public/img/byte_logo.png"/></a>
+                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "../mainpage_logged"> byte. </a> </span>
                         </div>
                     </div>
                     <div class="headersearchbar">
@@ -92,12 +92,12 @@
                     <input type="search" class="posttext" placeholder="Create Post" onclick="redirectToAnotherPage()"/>
                 </div>
                 <div class="createpostpic">
-                    <a href="./CreatePost.html">
+                    <a href="/Create_Post">
                     <img src="/public/img/image-alt-regular-24.png"/>
                     </a>
                 </div>
                 <div class="createpostattach">
-                    <a href="./CreatePost.html">
+                    <a href="/Create_Post">
                     <img src="/public/img/folder-plus-regular-24.png"/>
                     </a>
                 </div>
