--- a/views/samplepost1.hbs
+++ b/views/samplepost1.hbs
@@ -12,8 +12,8 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./mainpage"><img src="../public/img/byte_logo.png"/></a>
-                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./mainpage"> byte. </a> </span>
+                        <a href="../mainpage"><img src="../public/img/byte_logo.png"/></a>
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "../mainpage"> byte. </a> </span>
                     </div>
                 </div>
                 <div class="headersearchbar">
