--- a/views/CreatePost.hbs
+++ b/views/CreatePost.hbs
@@ -40,15 +40,15 @@
                     </div>
                     <div class="profilecontainer">
                         <div class="profiledisplayname">
-                            <span>gojowithiphone</span>
+                            <span>{{currentUser.username}}</span>
                         </div>
                         <div class="profilehandlename">
-                            <span>u/gojo1234</span>
+                            <span>{{current.userhandle}}</span>
                         </div>
                     </div>
                 </div>
                 <div class="topbuttons">
-                    <a href="./main_not_logged.html"> Log out </a>
+                    <a href="/mainpage"> Log out </a>
                 </div>
             </div>
         </div>
