--- a/views/mainpage.hbs
+++ b/views/mainpage.hbs
@@ -49,14 +49,11 @@
             <div class="navigation">
                 <div class="communities">
                     <div class="dropdown">
+                        <a href="/Sign_up">
                         <button class="dropbtn">Communities
                           <i class="fa fa-caret-down"></i>
                         </button>
-                        <div class="dropdown-content">
-                          <a href="/main_community">r/apple</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="newposts">
