--- a/views/templates/postreply.hbs
+++ b/views/templates/postreply.hbs
@@ -2,7 +2,7 @@
             <div class="replybox">
                 <div class = "replyinfo"> 
                     <div class="replypfp"> 
-                        <a href="{{ReplierProfileLink}}"> <img class="userimg" src="{{userdeets.pfplink}}"> </a>
+                        <a href="{{userdeets.profilelink}}"> <img class="userimg" src="{{userdeets.pfplink}}"> </a>
                     </div>
                     <p> {{userdeets.username}} <br><span> {{userdeets.userhandle}} </span><br> Bits: {{userdeets.bits}}</p>
                     <div class="postdate"> 
