--- a/views/CreatePost.hbs
+++ b/views/CreatePost.hbs
@@ -33,18 +33,21 @@
                 <div class="profile">
                     <div class="profileicon">
                         <div class="profileiconholder">
-                            <a href="./profilepage2.html">
+                            <a href="{{userprofilelink}}">
                             <img src="/public/img/pfp.jpg"/>
                             </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
+                        <a href="{{userprofilelink}}">
                         <div class="profiledisplayname">
-                            <span>{{currentUser.username}}</span>
+                            
+                            <span>{{username}}</span>
                         </div>
                         <div class="profilehandlename">
-                            <span>{{current.userhandle}}</span>
+                            <span>{{userhandle}}</span>
                         </div>
+                        </a>
                     </div>
                 </div>
                 <div class="topbuttons">
