--- a/views/CreatePost.hbs
+++ b/views/CreatePost.hbs
@@ -33,19 +33,19 @@
                 <div class="profile">
                     <div class="profileicon">
                         <div class="profileiconholder">
-                            <a href="{{userprofilelink}}">
+                            <a href="{{currentUser.userprofilelink}}">
                             <img src="/public/img/pfp.jpg"/>
                             </a>
                         </div>
                     </div>
                     <div class="profilecontainer">
-                        <a href="{{userprofilelink}}">
+                        <a href="{{currentUser.userprofilelink}}">
                         <div class="profiledisplayname">
                             
-                            <span>{{username}}</span>
+                            <span>{{currentUser.username}}</span>
                         </div>
                         <div class="profilehandlename">
-                            <span>{{userhandle}}</span>
+                            <span>{{currentUser.userhandle}}</span>
                         </div>
                         </a>
                     </div>
