--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -28,7 +28,12 @@
     <!--change link to logged in version later-->
         <div class = "Username">
             <label for="username">Username:</label>
-            <input type="email" id="username" name="username" required/>
+            <input type="text" id="username" name="username" required/>
+        </div>
+
+        <div class = "Userhandle">
+            <label for="userhandle">Userhandle:</label>
+            <input type="text" id="userhandle" name="userhandle" required/>
         </div>
 
         <div class = "Password">
