--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -10,8 +10,8 @@
                 <div class = "headercontent">
                     <div class="headerhome">
                         <div class="websitelogo">
-                            <a href="../mainpage_logged"><img src="/public/img/byte_logo.png"/></a>
-                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "../mainpage_logged"> byte. </a> </span>
+                            <a href="/mainpage_logged"><img src="/public/img/byte_logo.png"/></a>
+                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "/mainpage_logged"> byte. </a> </span>
                         </div>
                     </div>
                     <div class="headersearchbar">
@@ -69,19 +69,17 @@
                           <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            {{#each communitydrop}}
-                                {{> dropdown this}}
-                            {{/each}}
+                          <a href="/main_community/apple">r/apple</a>
                         </div>
                     </div>
                 </div>
                 <div class="newposts">
-                    <a href="/main.html">
+                    <a href="/newposts">
                     <img src="/public/img/badge-regular-24.png">
                     </a>
                 </div>
                 <div class="hotposts">
-                    <a href="/main.html">
+                    <a href="/hotposts">
                     <img src="/public/img/hot-solid-24.png">
                     </a>
                 </div>
