--- a/public/css/profilepage.css
+++ b/public/css/profilepage.css
@@ -372,6 +372,30 @@ body
     margin: 10px;
     display: none;   
 }
+
+.pfpeditbutton label:hover {
+    background-color: #7A03A1;
+    cursor: pointer;
+}
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+.pfpeditbutton label {
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+    display:block;
+    background-color: #BD8FCB;
+    margin: auto;
+    padding: 7px;
+    border-radius: 5px;
+    border: none;
+}
 .editbutton button:hover {
     background-color: #7A03A1;
 }
@@ -393,6 +417,20 @@ body
     margin: auto;
     padding: 7px;
     border-radius: 5px;
+}
+.pfpeditbutton button {
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+    display:block;
+    background-color: #BD8FCB;
+    margin: auto;
+    border-radius: 5px;
+    border:none;
+}
+
+.editbutton button:hover {
+    background-color: #7A03A1;
 }
 
 .editbutton a {
