--- a/views/main_community.hbs
+++ b/views/main_community.hbs
@@ -10,8 +10,8 @@
                 <div class = "headercontent">
                     <div class="headerhome">
                         <div class="websitelogo">
-                            <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
-                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
+                            <a href="/mainpage_logged"><img src="/public/img/byte_logo.png"/></a>
+                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "/mainpage_logged"> byte. </a> </span>
                         </div>
                     </div>
                     <div class="headersearchbar">
