--- a/views/samplepost1.hbs
+++ b/views/samplepost1.hbs
@@ -23,17 +23,17 @@
                     <div class="profile">
                         <div class="profileicon">
                             <div class="profileiconholder">
-                                <a href="{{userPosted.userprofilelink}}">
-                                <img src="{{userPosted.pfplink}}"/>
+                                <a href="{{currentUser.userprofilelink}}">
+                                <img src="{{currentUser.pfplink}}"/>
                                 </a>
                             </div>
                         </div>
                         <div class="profilecontainer">
                             <div class="profiledisplayname">
-                                <span>{{userPosted.username}}</span>
+                                <span>{{currentUser.username}}</span>
                             </div>
                             <div class="profilehandlename">
-                                <span>{{userPosted.userhandle}}</span>
+                                <span>{{currentUser.userhandle}}</span>
                             </div>
                         </div>
                     </div>
