--- a/views/main_community.hbs
+++ b/views/main_community.hbs
@@ -48,7 +48,7 @@
 
             <div class="communityiconinfo">
                 <div class="communityicon">
-                    <img src="/public/img/apple_logo.jpg"/>
+                    <img src="{{community.communityicon}}"/>
                 </div>
                 <div class="communityname">
                     <div class="communitydisplaynamecontainer">
