--- a/views/main_community.hbs
+++ b/views/main_community.hbs
@@ -98,7 +98,7 @@
                     <input type="search" class="posttext" placeholder="Create Post" onclick="redirectToAnotherPage()"/>
                 </div>
                 <div class="createpostpic">
-                    <a href="Create_Post">
+                    <a href="/Create_Post">
                     <img src="/static/img/image-alt-regular-24.png"/>
                     </a>
                 </div>
