--- a/public/css/profilepage.css
+++ b/public/css/profilepage.css
@@ -370,7 +370,6 @@ body
     font-size: 15px;
     padding: 7px;
     margin: 10px;
-    display: none;   
 }
 
 .pfpeditbutton label:hover {
@@ -398,6 +397,22 @@ body
 }
 .editbutton button:hover {
     background-color: #7A03A1;
+}
+
+#profiledescinput {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#profiledescinput input{
+    background: white;
+    border: 0;
+    border-radius: 8px;
+    padding: 5px;
+    outline: none;
+    color: black;
+    font-size: 14px;
+    width: 90%;
 }
 
 .pfpeditbutton {
