--- a/views/samplepost1.hbs
+++ b/views/samplepost1.hbs
@@ -3,9 +3,12 @@
 <head>
     <title> {{returnedPost.postheader}} </title>
     <link rel="stylesheet" type="text/css" href="/static/css/viewpost.css" />
+    <script src="/static/js/ownerpost.js" defer></script>
+
 </head>
 
 <body>
+    <input type="hidden" id="hiddenValue" value="{{id}}">
     <div class="homecontainer">
         <div class = "webheader">
             <div class = "headercontent">
@@ -69,8 +72,12 @@
                 </div>
                 {{#if postOwner}}
                 <div class = "editanddelete">
-                    <button type = "button" class = "ownerbutton"> Edit </button>
-                    <button type = "button" class = "ownerbutton"> Delete </button>
+                    <button type = "button" class = "editbutton"> Edit </button>
+                    <button type = "button" class = "deletebutton"> Delete </button>
+                </div>
+                <div class="edit-post-form" style="display: none;">
+                    <textarea class="edit-textarea"></textarea>
+                    <button type="button" class="save-button">Save</button>
                 </div>
                 {{/if}}
                 <div class="footer">
