--- a/views/templates/guest_postview.hbs
+++ b/views/templates/guest_postview.hbs
@@ -1,4 +1,4 @@
-<script src="/public/js/postview.js" defer></script>
+<script src="/static/js/postview.js" defer></script>
 <div class="postscontainer">
     <div class="postheader">
         <div class="communityposticonholder">
