--- a/views/main_community.hbs
+++ b/views/main_community.hbs
@@ -124,6 +124,9 @@
                     </a>
                 </div>
             </div>
+            {{#each posts}}
+                {{> postview this}}
+            {{/each}}
         </div>
     </body>
 </html>
