--- a/public/css/profilepage.css
+++ b/public/css/profilepage.css
@@ -370,6 +370,7 @@ body
     font-size: 15px;
     padding: 7px;
     margin: 10px;
+    /* display: none; */
 }
 
 .pfpeditbutton label:hover {
@@ -399,12 +400,12 @@ body
     background-color: #7A03A1;
 }
 
-#profiledescinput {
+.profiledescinput {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-#profiledescinput input{
+.profiledescinput input{
     background: white;
     border: 0;
     border-radius: 8px;
@@ -413,6 +414,7 @@ body
     color: black;
     font-size: 14px;
     width: 90%;
+    /* display:none; */
 }
 
 .pfpeditbutton {
