--- a/public/css/viewpost.css
+++ b/public/css/viewpost.css
@@ -425,7 +425,7 @@ body
     padding: 10px;
 }
 
-.editbutton, .deletebutton, .save-button {
+.editbutton, .deletebutton, .save-button, .editreplybutton, .deletereplybutton, .savereplybutton {
     text-decoration: none;
     color: black;
     font-size: 14px;
@@ -438,7 +438,12 @@ body
     cursor: pointer;
  
 }
-.replybutton button:hover, .ownerbutton:hover {
+.editreplybutton, .deletereplybutton{
+    margin-right: 10px
+}
+
+.replybutton button:hover, .editbutton:hover, .deletebutton:hover, .save-button:hover, .editreplybutton:hover
+, .deletereplybutton:hover, .savereplybutton:hover {
     background-color: #7A03A1;
 }
 .replyinputarea {
