Upvote/downvote should be working
although it won't refresh right away yet

--- a/views/templates/postview.hbs
+++ b/views/templates/postview.hbs
@@ -1,5 +1,5 @@
 <script src="/static/js/postview.js" defer></script>
-<div class="postscontainer">
+<div class="postscontainer"  data-postid="{{postId}}">
     <div class="postheader">
         <div class="communityposticonholder">
             <div class="communityposticon">
