Create post bar reintroduced in mainpage_logged

--- a/views/main_community.hbs
+++ b/views/main_community.hbs
@@ -38,7 +38,7 @@
                         </div>
 
                         <div class="topbuttons">
-                            <a href="./main_not_logged.html"> Log out </a>
+                            <a href="/mainpage"> Log out </a>
                         </div>
                     </div>
                 </div>
