--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -41,6 +41,26 @@
                     </div>
                 </div>
             </div>
+            <div class="createpost">
+                <div class="createposticon">
+                    <div class="createpostusericonholder">
+                        <img src="{{user.pfplink}}"/>
+                    </div>
+                </div>
+                <div class="createposttext">
+                    <input type="search" class="posttext" placeholder="Create Post" onclick="redirectToAnotherPage()"/>
+                </div>
+                <div class="createpostpic">
+                    <a href="/Create_Post">
+                    <img src="/static/img/image-alt-regular-24.png"/>
+                    </a>
+                </div>
+                <div class="createpostattach">
+                    <a href="/Create_Post">
+                    <img src="/static/img/folder-plus-regular-24.png"/>
+                    </a>
+                </div>
+            </div>
             <div class="navigation">
                 <div class="communities">
                     <div class="dropdown">
