--- a/views/samplepost1.hbs
+++ b/views/samplepost1.hbs
@@ -14,8 +14,8 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="../mainpage"><img src="/static/img/byte_logo.png"/></a>
-                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "../mainpage"> byte. </a> </span>
+                        <a href="/mainpage_logged"><img src="/static/img/byte_logo.png"/></a>
+                        <span class = "link"> <a style = "color: beige; text-decoration: none" href = "/mainpage_logged"> byte. </a> </span>
                     </div>
                 </div>
                 <div class="headersearchbar">
