Fixed some community stuff

--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -69,6 +69,7 @@
                         </button>
                         <div class="dropdown-content">
                           <a href="/main_community/apple">r/apple</a>
+                          <a href="/main_community/webdev">r/webdev</a>
                         </div>
                     </div>
                 </div>
