--- a/views/templates/postreply.hbs
+++ b/views/templates/postreply.hbs
@@ -1,21 +1,21 @@
 <div class="replycontainer"> 
             <div class="replybox">
                 <div class = "replyinfo"> 
-                    <input type="hidden" id="replyId" value="{{replyId}}">
+                    <input type="hidden" id="replyId" value="{{this.replyId}}">
 
                     <div class="replypfp"> 
-                        <a href="{{user.userhandlelink}}"> <img class="userimg" src="{{user.pfplink}}"> </a>
+                        <a href="{{this.user.userhandlelink}}"> <img class="userimg" src="{{this.user.pfplink}}"> </a>
                     </div>
-                    <p> {{user.username}} {{currentUser.username}} <br><span> {{user.userhandle}} </span><br> Bits: {{user.bits}}</p>
+                    <p> {{this.user.username}} {{this.currentUser.username}} <br><span> {{this.user.userhandle}} </span><br> Bits: {{this.user.bits}}</p>
                     <div class="postdate"> 
-                        <h5> Posted on: {{replydate}} </h5>
-                        <p> {{ReplyDateDistance}} </p>
+                        <h5> Posted on: {{this.replydate}} </h5>
+                        <p> {{this.ReplyDateDistance}} </p>
                     </div>
                 </div>
                 
                 
                 <div class="replycontent"> 
-                    <p> {{replycontent}} <br> </p>
+                    <p> {{this.replycontent}} <br> </p>
                     <div class="footer">
                     {{#if isOwner}}
                         <div class = "editanddelete">
@@ -49,4 +49,20 @@
                 </div>
                 </div>
             </div>
+            <div class="replyinputarea"> 
+            <div class="replyinputbox">
+                <form action="/submitsubreply/{{this.replyId}}" method="POST"> 
+                <input type="text" id="replytextcontent" name="replytextcontent" placeholder="Reply to this post..."/> 
+            </div>
+            <div class="replybutton"><button type="submit" value="submit"> Reply </button> </div>
+           
+            </form>
+            
         </div>
+        </div>
+
+        {{#if replies}}
+            {{#each replies}}
+                    {{> postreply this}}
+            {{/each}}
+        {{/if}}
